--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -27,7 +27,7 @@ body {
 }
 .display-2 {
   font-family: 'Poppins', sans-serif;
-  font-size: 3rem;
+  font-size: 3.3rem;
 }
 .display-4 {
   font-family: 'Poppins', sans-serif;
@@ -53,9 +53,9 @@ body {
     line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.64rem;
+    font-size: calc( 1.805rem + (3.3 - 1.805) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.805rem + (3.3 - 1.805) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.7rem;
@@ -890,7 +890,7 @@ pre {
   font-size: 6.8rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 5.28rem;
 }
 .display-4 > .mbr-iconfont {
   font-size: 1.4rem;
@@ -1561,6 +1561,9 @@ body {
 }
 .cid-qC5iqKFCT6 a.close:hover {
   color: #ffffff;
+}
+.cid-qC5iqKFCT6 P {
+  text-align: center;
 }
 .cid-qC5feZdtdE {
   padding-top: 30px;
