--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -27,7 +27,7 @@ body {
 }
 .display-2 {
   font-family: 'Poppins', sans-serif;
-  font-size: 3.3rem;
+  font-size: 3rem;
 }
 .display-4 {
   font-family: 'Poppins', sans-serif;
@@ -53,9 +53,9 @@ body {
     line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.64rem;
-    font-size: calc( 1.805rem + (3.3 - 1.805) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.805rem + (3.3 - 1.805) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.4rem;
+    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.7rem;
@@ -890,7 +890,7 @@ pre {
   font-size: 6.8rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 5.28rem;
+  font-size: 4.8rem;
 }
 .display-4 > .mbr-iconfont {
   font-size: 1.4rem;
@@ -923,7 +923,7 @@ body {
 }
 .cid-qC5es03T0F .navbar {
   padding: .5rem 0;
-  background: #ffffff;
+  background: #555555;
   transition: none;
   min-height: 77px;
 }
@@ -970,7 +970,7 @@ body {
   transition: font-size 0.25s;
 }
 .cid-qC5es03T0F .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #555555;
 }
 .cid-qC5es03T0F a {
   font-style: normal;
@@ -1164,7 +1164,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qC5es03T0F .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #555555;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1502,7 +1502,7 @@ body {
 }
 .cid-qC5es03T0F .dropdown-item.active,
 .cid-qC5es03T0F .dropdown-item:active {
-  background-color: #ffffff;
+  background-color: #555555;
   color: initial;
 }
 .cid-qC5iqKFCT6 {
@@ -1603,6 +1603,10 @@ body {
     max-width: 20%;
     padding: 15px;
   }
+}
+.cid-qC5f5VisKY .card-title,
+.cid-qC5f5VisKY .card-img {
+  text-align: center;
 }
 .cid-qC5fpxSJez {
   padding-top: 15px;
